--- a/package.json
+++ b/package.json
@@ -7,23 +7,25 @@
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.0.5",
     "@snowpack/plugin-react-refresh": "^2.3.9",
     "@snowpack/plugin-typescript": "^1.1.1",
     "@snowpack/web-test-runner-plugin": "^0.1.5",
-    "@testing-library/react": "^11.0.0",
-    "@types/chai": "^4.2.13",
+    "@testing-library/react": "^11.2.2",
+    "@types/chai": "^4.2.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/snowpack-env": "^2.3.2",
-    "@web/test-runner": "^0.10.0",
+    "@types/styled-components": "^5.1.5",
+    "@web/test-runner": "^0.10.1",
     "chai": "^4.2.0",
-    "prettier": "^2.0.5",
+    "prettier": "^2.2.1",
     "snowpack": "^2.18.3",
-    "typescript": "^4.0.0"
+    "typescript": "^4.1.3"
   }
 }
