--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
   "dependencies": {
     "nanoid": "^3.1.22",
     "react": "^17.0.2",
-    "react-dnd": "13.1.1",
+    "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "12.1.1",
     "react-dom": "^17.0.2",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
-    "@snowpack/plugin-dotenv": "^2.0.5",
-    "@snowpack/plugin-react-refresh": "^2.4.1",
+    "@snowpack/plugin-dotenv": "^2.1.0",
+    "@snowpack/plugin-react-refresh": "^2.4.2",
     "@snowpack/plugin-typescript": "^1.2.1",
     "@snowpack/web-test-runner-plugin": "^0.2.2",
-    "@testing-library/react": "^11.2.5",
+    "@testing-library/react": "^11.2.6",
     "@types/chai": "^4.2.15",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/snowpack-env": "^2.3.3",
     "@types/styled-components": "^5.1.9",
-    "@web/test-runner": "^0.12.17",
+    "@web/test-runner": "^0.12.18",
     "chai": "^4.3.4",
     "prettier": "^2.2.1",
-    "snowpack": "^3.1.2",
+    "snowpack": "^3.2.2",
     "typescript": "^4.2.3"
   }
 }
