--- a/package.json
+++ b/package.json
@@ -1,34 +1,41 @@
 {
+  "name": "trello-clone",
+  "private": true,
+  "version": "3.0.0",
+  "type": "module",
   "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build",
-    "test": "web-test-runner \"src/**/*.test.tsx\"",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "prettier:lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
-    "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
+    "preview": "vite preview"
   },
   "dependencies": {
-    "nanoid": "^3.1.22",
-    "react": "^17.0.1",
-    "react-dnd": "13.1.1",
-    "react-dnd-html5-backend": "12.1.1",
-    "react-dom": "^17.0.1",
-    "styled-components": "^5.2.1"
+    "immer": "^10",
+    "nanoid": "^5",
+    "react": "^latest",
+    "react-dnd": "16.0.1",
+    "react-dnd-html5-backend": "16.0.1",
+    "react-dom": "latest",
+    "styled-components": "^6",
+    "use-immer": "^0.9.0"
   },
   "devDependencies": {
-    "@snowpack/plugin-dotenv": "^2.0.5",
-    "@snowpack/plugin-react-refresh": "^2.4.0",
-    "@snowpack/plugin-typescript": "^1.2.1",
-    "@snowpack/web-test-runner-plugin": "^0.2.1",
-    "@testing-library/react": "^11.2.5",
-    "@types/chai": "^4.2.15",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
-    "@types/snowpack-env": "^2.3.3",
-    "@types/styled-components": "^5.1.9",
-    "@web/test-runner": "^0.12.17",
-    "chai": "^4.3.4",
-    "prettier": "^2.2.1",
-    "snowpack": "^3.0.13",
-    "typescript": "^4.2.3"
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/styled-components": "^5",
+    "@typescript-eslint/eslint-plugin": "^6",
+    "@typescript-eslint/parser": "^6",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "prettier": "^3",
+    "typescript": "^5",
+    "vite": "^5"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
